Add support for the Windows Store

--- a/test/index.html
+++ b/test/index.html
@@ -9,12 +9,17 @@
 
 <meta name="apple-itunes-app" content="app-id=502838820">
 <meta name="google-play-app" content="app-id=ru.hh.android">
+
+<meta name="msApplication-ID" content="microsoft.build.App"/>
+<meta name="msApplication-PackageFamilyName" content="microsoft.build_8wekyb3d8bbwe"/>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <link rel="stylesheet" type="text/css" href="../smart-app-banner.css">
 <link rel="apple-touch-icon" href="icon.png">
 <link rel="android-touch-icon" href="icon.png" />
+<link rel="windows-touch-icon" href="icon.png" />
 
 <style type="text/css">
 	* {
@@ -32,15 +37,7 @@
 		appStoreLanguage: 'us', // language code for the App Store (defaults to us)
 		title: 'KudaGo',
 		author: 'KudaGo Inc',
-		button: 'OPEN',
-		store: {
-			ios: 'On the App Store',
-			android: 'In Google Play'
-		},
-		price: {
-			ios: 'FREE',
-			android: 'FREE'
-		}
-		// , force: 'ios' // Uncomment for platform emulation
+		button: 'OPEN'
+		force: 'windows' // Uncomment for platform emulation
 	});
 </script>
